# VXR_Engine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
shaders/: lighting.frag.spv  lighting.vert.spv  triangle.frag.spv  triangle.vert.spv  unlit3d.frag.spv  unlit3d.vert.spv
src/asset/: ModelLoader.cpp  ModelLoader.h
src/core/: Application.cpp  Application.h  Logger.cpp  Logger.h  Window.cpp  Window.h
src/input/: CameraController.cpp  CameraController.h
src/lighting/: Light.h  LightFactory.h  LightingLimits.h  LightingTypes.h  SceneLighting.h
src/renderer/: Camera.cpp  Camera.h  CameraUBO.h  FrameContext.h  MaterialInstance.cpp  MaterialInstance.h  MaterialTemplate.cpp  MaterialTemplate.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PushConstants.h  RenderObject.h  RenderQueue.cpp  RenderQueue.h  Scene.cpp  Scene.h  SceneUBO.h  Transform.h  TriangleData.h  Vertex.h  Vertex3D.h  VulkanCameraBuffers.h  VulkanCheck.h  VulkanCommandBuffers.cpp  VulkanCommandBuffers.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDepthBuffer.cpp  VulkanDepthBuffer.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffers.cpp  VulkanFramebuffers.h  VulkanIndexBuffer.cpp  VulkanIndexBuffer.h  VulkanInstance.cpp  (+17 more)
src/renderer/pipeline/: VulkanPipeline.cpp  VulkanPipeline.h
src/renderer/shaders/: lighting.frag  lighting.vert  triangle.frag  triangle.vert  unlit3d.frag  unlit3d.vert
